crates/ty_python_semantic/resources/mdtest/snapshots/methods.md_-_Methods_-_`@classmethod`_-_`__init_subclass__`_-_Basics_(a1fb03132e42b69e).snap
---
source: crates/ty_test/src/lib.rs
expression: snapshot
---

---
mdtest name: methods.md - Methods - `@classmethod` - `__init_subclass__` - Basics
mdtest path: crates/ty_python_semantic/resources/mdtest/call/methods.md
---

# Python source files

## mdtest_snippet.py

```
 1 | class Base:
 2 |     def __init_subclass__(cls, **kwargs):
 3 |         super().__init_subclass__(**kwargs)
 4 |         cls.custom_attribute: int = 0
 5 | 
 6 | class Derived(Base):
 7 |     pass
 8 | 
 9 | reveal_type(Derived.custom_attribute)  # revealed: int
10 | class Empty: ...
11 | 
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
14 | 
15 | class NoArg:
16 |     def __init_subclass__(cls): ...
17 | 
18 | # Single-base definitions
19 | class MissingArg(RequiresArg): ...  # error: [missing-argument]
20 | class InvalidType(RequiresArg, arg="foo"): ...  # error: [invalid-argument-type]
21 | class Valid(RequiresArg, arg=1): ...
22 | 
23 | # error: [missing-argument]
24 | # error: [unknown-argument]
25 | class IncorrectArg(RequiresArg, not_arg="foo"):
26 |     a = 1
27 |     b = 2
28 |     c = 3
29 |     d = 4
30 |     e = 5
31 |     f = 6
32 |     g = 7
33 |     h = 8
34 |     i = 9
35 |     j = 10
36 | 
37 | class NotCallableInitSubclass:
38 |     __init_subclass__ = None
39 | 
40 | # TODO: terrible diagnostic message and annotations,
41 | # we should at least add a subdiagnostic pointing to where
42 | # `__init_subclass__ = None` on the superclass
43 | #
44 | # error: [call-non-callable] "Object of type `None` is not callable"
45 | class Bad(NotCallableInitSubclass):
46 |     a = 1
47 |     b = 2
48 |     c = 3
49 | class Base:
50 |     def __init_subclass__(cls, arg: int): ...
51 | 
52 | class Valid(Base, arg=5, metaclass=object): ...
53 | 
54 | # error: [invalid-argument-type]
55 | class Invalid(Base, metaclass=type, arg="foo"): ...
56 | from typing import Literal, overload
57 | 
58 | class Base:
59 |     @overload
60 |     def __init_subclass__(cls, mode: Literal["a"], arg: int) -> None: ...
61 |     @overload
62 |     def __init_subclass__(cls, mode: Literal["b"], arg: str) -> None: ...
63 |     def __init_subclass__(cls, mode: str, arg: int | str) -> None: ...
64 | 
65 | class Valid(Base, mode="a", arg=5): ...
66 | class Valid(Base, mode="b", arg="foo"): ...
67 | 
68 | # error: [no-matching-overload]
69 | class InvalidType(Base, mode="b", arg=5):
70 |     a = 1
71 |     b = 2
72 |     c = 3
73 |     d = 4
74 |     e = 5
```

# Diagnostics

```
error[missing-argument]: No argument provided for required parameter `arg` of function `__init_subclass__`
  --> src/mdtest_snippet.py:19:1
   |
18 | # Single-base definitions
19 | class MissingArg(RequiresArg): ...  # error: [missing-argument]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
20 | class InvalidType(RequiresArg, arg="foo"): ...  # error: [invalid-argument-type]
21 | class Valid(RequiresArg, arg=1): ...
   |
info: Parameter declared here
  --> src/mdtest_snippet.py:13:32
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |                                ^^^^^^^^
14 |
15 | class NoArg:
   |

```

```
error[invalid-argument-type]: Argument to function `__init_subclass__` is incorrect
  --> src/mdtest_snippet.py:20:32
   |
18 | # Single-base definitions
19 | class MissingArg(RequiresArg): ...  # error: [missing-argument]
20 | class InvalidType(RequiresArg, arg="foo"): ...  # error: [invalid-argument-type]
   |                                ^^^^^^^^^ Expected `int`, found `Literal["foo"]`
21 | class Valid(RequiresArg, arg=1): ...
   |
info: Function defined here
  --> src/mdtest_snippet.py:13:9
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |         ^^^^^^^^^^^^^^^^^      -------- Parameter declared here
14 |
15 | class NoArg:
   |

```

```
error[missing-argument]: No argument provided for required parameter `arg` of function `__init_subclass__`
  --> src/mdtest_snippet.py:25:1
   |
23 | # error: [missing-argument]
24 | # error: [unknown-argument]
25 | class IncorrectArg(RequiresArg, not_arg="foo"):
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
26 |     a = 1
27 |     b = 2
   |
info: Parameter declared here
  --> src/mdtest_snippet.py:13:32
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |                                ^^^^^^^^
14 |
15 | class NoArg:
   |

```

```
error[unknown-argument]: Argument `not_arg` does not match any known parameter of function `__init_subclass__`
  --> src/mdtest_snippet.py:25:33
   |
23 | # error: [missing-argument]
24 | # error: [unknown-argument]
25 | class IncorrectArg(RequiresArg, not_arg="foo"):
   |                                 ^^^^^^^^^^^^^
26 |     a = 1
27 |     b = 2
   |
info: Function signature here
  --> src/mdtest_snippet.py:13:9
   |
12 | class RequiresArg:
13 |     def __init_subclass__(cls, arg: int): ...
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
14 |
15 | class NoArg:
   |

```

```
error[call-non-callable]: Object of type `None` is not callable
  --> src/mdtest_snippet.py:45:1
   |
43 | #
44 | # error: [call-non-callable] "Object of type `None` is not callable"
45 | class Bad(NotCallableInitSubclass):
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
46 |     a = 1
47 |     b = 2
   |
info: Union variant `None` is incompatible with this call site
info: Attempted to call union type `None | Unknown`

```

```
error[invalid-argument-type]: Argument to function `__init_subclass__` is incorrect
  --> src/mdtest_snippet.py:55:37
   |
54 | # error: [invalid-argument-type]
55 | class Invalid(Base, metaclass=type, arg="foo"): ...
   |                                     ^^^^^^^^^ Expected `int`, found `Literal["foo"]`
56 | from typing import Literal, overload
   |
info: Function defined here
  --> src/mdtest_snippet.py:50:9
   |
48 |     c = 3
49 | class Base:
50 |     def __init_subclass__(cls, arg: int): ...
   |         ^^^^^^^^^^^^^^^^^      -------- Parameter declared here
51 |
52 | class Valid(Base, arg=5, metaclass=object): ...
   |

```

```
error[no-matching-overload]: No overload of function `__init_subclass__` matches arguments
  --> src/mdtest_snippet.py:69:1
   |
68 | # error: [no-matching-overload]
69 | class InvalidType(Base, mode="b", arg=5):
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
70 |     a = 1
71 |     b = 2
   |
info: First overload defined here
  --> src/mdtest_snippet.py:60:9
   |
58 | class Base:
59 |     @overload
60 |     def __init_subclass__(cls, mode: Literal["a"], arg: int) -> None: ...
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
61 |     @overload
62 |     def __init_subclass__(cls, mode: Literal["b"], arg: str) -> None: ...
   |
info: Possible overloads for function `__init_subclass__`:
info:   (cls, mode: Literal["a"], arg: int) -> None
info:   (cls, mode: Literal["b"], arg: str) -> None
info: Overload implementation defined here
  --> src/mdtest_snippet.py:63:9
   |
61 |     @overload
62 |     def __init_subclass__(cls, mode: Literal["b"], arg: str) -> None: ...
63 |     def __init_subclass__(cls, mode: str, arg: int | str) -> None: ...
   |         ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
64 |
65 | class Valid(Base, mode="a", arg=5): ...
   |

```
